# poly-arb-bot

./: .gitattributes  .gitignore  AGENTS.md  pyproject.toml
data/: live_markets.example.json  sample_live_snapshot.json
deploy/: VPS_DEPLOY.md  env.example  poly-arb-bot.logrotate  poly-arb-bot.service  poly-arb-web.service
docs/: dashboard-data-map.md  dashboard-ui-spec.md  diagnosis-reference-stale.md  local-run-windows.md  phase0-maker-parameter-research.md  polymarket-api-current-state.md  strategy-focus-arb-2026-07-21.md  vps-deployment-runbook.md
poly_arb_bot/: __init__.py  arbitrage_research.py  binance_source.py  chainlink_source.py  cli.py  clob_client.py  cpp_bridge.py  cpp_strategy_parity.py  ev_shadow.py  ev_strategies.py  execution_engine.py  http_utils.py  jsonl_history.py  live_signals.py  logger.py  maker_accumulate.py  maker_shadow.py  market_scanner.py  models.py  paired_opportunity_report.py  pnl_curve.py  polymarket_data.py  position_manager.py  reference_layer.py  risk_manager.py  shadow_acceptance.py  shadow_execution.py  shadow_opportunity.py  shadow_report.py  shadow_ws.py  state_store.py  strategy.py  strategy_calibration.py  strategy_config.py  strategy_shadow_lifecycle.py  web_monitor.py
scripts/: build_cpp.ps1  build_cpp.sh  check_ntp.sh  collect_orderbook_snapshots.py  collect_trade_flow_ws.py  phase0_analysis.py  phase0_analysis2.py  probe_reference_ws.py  probe_reference_ws_prices.py  run_shadow_loop.sh  vps_bootstrap.sh
tests/: test_arbitrage_research.py  test_atomic_market_file.py  test_clob_market_filter.py  test_deploy_files.py  (+29 more)
(+42 files in other folders)
