[project]
name = "poly-arb-bot"
version = "0.1.0"
requires-python = ">=3.9"
description = "Polymarket Crypto Up/Down live-ready dry-run strategy loop"
dependencies = ["websockets>=12,<16"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["poly_arb_bot*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
